--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wasm-ruby",
   "version": "1.0.0",
-  "description": "wasm-ruby files for ruby versions",
+  "description": "wasm-ruby files for ruby versions. WebAssembly port of CRuby by Emscripten with a thin JavaScript wrapper to run ruby scripts in node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
